welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit = true) {
                ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for (cpt <- 1 to 6) {
           ^